--- a/chapter7-exercise.css
+++ b/chapter7-exercise.css
@@ -3,3 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.main-visual {
+  height: 400px;
+  background-image: url(img/mv.jpg);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.main-visual-text {
+  padding: 20px 0 0 20px;
+  color: gray;
+}
