--- a/chapter7-exercise.css
+++ b/chapter7-exercise.css
@@ -15,3 +15,19 @@
   padding: 20px 0 0 20px;
   color: gray;
 }
+
+main {
+  width: 840px;
+  margin-top: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.main-box {
+  margin: 50px 0;
+}
+
+.main-content-tpo {
+  padding-bottom: 30px;
+  border-bottom: 1px solid gray;
+}
