--- a/chapter7-exercise.css
+++ b/chapter7-exercise.css
@@ -6,6 +6,7 @@
 
 .main-visual {
   height: 400px;
+  width: 100%;
   background-image: url(img/mv.jpg);
   background-size: cover;
   background-position: bottom;
@@ -18,16 +19,17 @@
 
 main {
   width: 840px;
-  margin-top: 0 auto;
-  display: flex;
-  justify-content: center;
+  margin: 50px auto;
 }
 
-.main-box {
-  margin: 50px 0;
+.main-content-top {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid gray;
 }
 
-.main-content-tpo {
+.main-content {
+  margin-bottom: 30px;
   padding-bottom: 30px;
   border-bottom: 1px solid gray;
 }
